--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -47,15 +47,13 @@
 a {
     &:link,
     &:visited {
-        &.btn-link {
-            &.cartRemove {
-                color: #900;
-                font-size: 90%;
-                padding-left: 0;
+        &.cartRemove {
+            color: #900;
+            font-size: 90%;
+            padding-left: 0;
 
-                &:hover {
-                    color: #c60000;
-                }
+            &:hover {
+                color: #c60000;
             }
         }
     }
@@ -1299,7 +1297,6 @@ nav {
         clear: both;
         text-align: inherit;
         white-space: nowrap;
-        background-color: transparent;
         border: 0;
      }
 }
@@ -1343,8 +1340,8 @@ nav {
     a {
         &:link,
         &:visited {
-            &.btn {
-                color: #FFF;
+            &.btn-default,
+            &.btn-secondary {
             }
         }
     }
